tests/fail/async_wait_conflict.tk
fn read_config() -> wait cstring {
    return "config"
}

fn fetch() -> async cstring {
    // Should trigger an error.
    read_config()
    return "hello"
}

fn fetch2() -> async cstring {
    // Should trigger an error
    "hello".wait
    return "hello"
}

fn main() -> i32 {
    return 0
}
